--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.25",
     "babel-plugin-styled-components": "^2.0.7",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
