--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.1",
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
@@ -30,6 +32,8 @@
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "jest": "^29.2.2",
+    "ts-jest": "^29.0.3",
     "typescript": "4.6.4"
   },
   "config": {
