--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.10",
@@ -21,19 +22,27 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.14",
+    "@swc/jest": "^0.2.23",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.2.1",
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
     "@types/react-scroll": "^1.8.3",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "babel-plugin-styled-components": "^2.0.7",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "jest": "^29.2.2",
-    "ts-jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.2.2",
+    "jest-styled-components": "^7.1.1",
+    "react-test-renderer": "^18.2.0",
+    "ts-node": "^10.9.1",
     "typescript": "4.6.4"
   },
   "config": {
