--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@hookform/resolvers": "^2.8.10",
     "axios": "^0.27.2",
-    "next": "12.1.6",
+    "next": "^13.0.6",
     "nookies": "^2.5.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.2",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
