--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.10",
+    "@vercel/analytics": "^0.1.6",
     "axios": "^0.27.2",
     "next": "^13.0.6",
     "nookies": "^2.5.2",
