--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.31.2",
     "react-scroll": "^1.8.7",
     "styled-components": "^5.3.5",
+    "ua-parser-js": "^1.0.32",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/react-scroll": "^1.8.3",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.25",
+    "@types/ua-parser-js": "^0.7.36",
     "babel-plugin-styled-components": "^2.0.7",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.15.0",
