--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "best-portfolio",
-  "version": "0.1.0",
+  "author": "Josué Mendonça <direct.josue@gmail.com>",
+  "version": "2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,47 +11,22 @@
     "test": "jest"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.8.10",
-    "@vercel/analytics": "^0.1.6",
-    "axios": "^0.27.2",
+    "@headlessui/react": "^1.7.17",
     "next": "^13.0.6",
-    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.31.2",
-    "react-scroll": "^1.8.7",
-    "styled-components": "^5.3.5",
-    "ua-parser-js": "^1.0.32",
-    "yup": "^0.32.11"
+    "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.14",
-    "@swc/jest": "^0.2.23",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.1",
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
-    "@types/react-scroll": "^1.8.3",
-    "@types/react-test-renderer": "^18.0.0",
-    "@types/styled-components": "^5.1.25",
-    "@types/ua-parser-js": "^0.7.36",
-    "babel-plugin-styled-components": "^2.0.7",
-    "cz-conventional-changelog": "3.3.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.2.2",
-    "jest-styled-components": "^7.1.1",
-    "react-test-renderer": "^18.2.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "ts-node": "^10.9.1",
     "typescript": "4.6.4"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
