--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "lucide-react": "^0.294.0",
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "vanilla-masker": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
