--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@types/vanilla-masker": "^1.2.4",
     "autoprefixer": "^10.4.16",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
