--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@vercel/analytics": "^1.1.1",
+    "axios": "^1.6.5",
     "lucide-react": "^0.294.0",
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
+    "ua-parser-js": "^1.0.37",
     "vanilla-masker": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
+    "@types/ua-parser-js": "^0.7.39",
     "@types/vanilla-masker": "^1.2.4",
     "autoprefixer": "^10.4.16",
     "eslint": "8.15.0",
